CUDA C++ Optimal/results/compilation_logs/compile_size_42_reg_32_20252911_2021.txt
========== COMPILATION START ========== 
Parameters: PARAMETR_SIZE=42, MAXREGCOUNT=32 
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_optimized.exe aco_cuda_optimized.cu -Xcompiler "/O2 /fp:fast /openmp /MT" -use_fast_math -lcudart -maxrregcount=32 -Xptxas "-O3,-v" --resource-usage 
 
aco_cuda_optimized.cu(246): warning #68-D: integer conversion resulted in a change of sign
          if (hashTable[idx].key == -1) return -1.0;
                                    ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_optimized.cu(257): warning #68-D: integer conversion resulted in a change of sign
          unsigned long long old = atomicCAS(&hashTable[idx].key, -1, key);
                                                                  ^

aco_cuda_optimized.cu(258): warning #68-D: integer conversion resulted in a change of sign
          if (old == -1 || old == key) {
                     ^

aco_cuda_optimized.cu(290): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

aco_cuda_optimized.cu(1290): error: identifier "ComputePheromonesAdaptive" is undefined
          ComputePheromonesAdaptive<true, 32> << <blocks_per_grid, threads_per_block, shared_memory_required, compute_stream >> > (
          ^

aco_cuda_optimized.cu(1290): error: expected an expression
          ComputePheromonesAdaptive<true, 32> << <blocks_per_grid, threads_per_block, shared_memory_required, compute_stream >> > (
                                              ^

aco_cuda_optimized.cu(1298): warning #12-D: parsing restarts here after previous syntax error
              dev_max, dev_min, dev_hash_fail, num_iterations);
                                                              ^

aco_cuda_optimized.cu(1302): error: identifier "ComputePheromonesAdaptive" is undefined
          ComputePheromonesAdaptive<false, 1> << <blocks_per_grid, threads_per_block, 0, compute_stream >> > (
          ^

aco_cuda_optimized.cu(1302): error: expected an expression
          ComputePheromonesAdaptive<false, 1> << <blocks_per_grid, threads_per_block, 0, compute_stream >> > (
                                              ^

aco_cuda_optimized.cu(1310): warning #12-D: parsing restarts here after previous syntax error
              dev_max, dev_min, dev_hash_fail, num_iterations);
                                                              ^

4 errors detected in the compilation of "aco_cuda_optimized.cu".
aco_cuda_optimized.cu
========== COMPILATION END ========== 
Exit code: 2 
